--- a/html5实例/basic.css
+++ b/html5实例/basic.css
@@ -2,8 +2,9 @@
 *{
 	padding:0px;
 	margin: 0px;
+	font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, "\5B8B\4F53", simsun, sans-serif;
 }
-ul li{
+ul li,ol{
 	list-style: outside none;
 }
 a{
