--- a/html5实例/column(pc).css
+++ b/html5实例/column(pc).css
@@ -292,6 +292,10 @@
 }
 #container .ticket .type{
 	margin:20px 0px 10px 0px;
+
+}
+#container .ticket fieldset{
+	border: none;
 }
 #container .ticket .type mark{
 	color: #fff;
@@ -320,7 +324,7 @@
 	background: #f60;
 	color: #fff;
 	border: 0;
-	margin:-top:6px;
+	margin-top:6px;
 	position: relative;
 	top:8px;
 	cursor: pointer;
